--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,16 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=sa
+
+# ===============================
+# = JPA
+# ===============================
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.jpa.hibernate.ddl-auto=validate
+# spring.jpa.properties.hibernate.default_schema=dbo
+spring.jpa.properties.javax.persistence.validation.mode=none
+
 rabbitmq.username=test
 rabbitmq.password=test
 rabbitmq.port=5672
